Education & connect added

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -103,6 +103,7 @@ h6 { font-size: 16px;}
 		'nav-wrapper nav-wrapper'
 		'left-column right-column'
 	;
+	padding-bottom: 50px;
 }
 
 
@@ -303,8 +304,8 @@ h6 { font-size: 16px;}
 
 .social-links{
 	display: grid;
-	align-content: center;
-	text-align: center;
+	/* align-content: center;
+	text-align: center; */
 }
 
 #social_img{
@@ -347,6 +348,16 @@ h6 { font-size: 16px;}
 .post-intro{
 	color:#4b5156;
 	font-size: 14px;
+}
+
+.tag {
+	display: inline-block;
+	color: #fff;
+	background-color: #888;
+	border-radius: 5px;
+	margin: 2px;
+	padding: 2px 5px;
+	font-size: 12px;	
 }
 
 
@@ -418,14 +429,14 @@ h6 { font-size: 16px;}
 
 @media screen and (max-width: 400px){
 	#preview-shadow{
-		max-width: 280px;
+		max-width: 240px;
 		height: 180px;
 		padding-left: 10px;
 		padding-top: 10px;
 	}
 
 	#preview{
-		width: 280px;
+		width: 240px;
 
 	}
 
