--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -15,6 +15,8 @@
 
 	--buttonColor:black;
 
+	--error: #dc3545;
+
 
 }
 
@@ -302,11 +304,11 @@ h6 { font-size: 16px;}
 	background-color: var(--previewShadow);
 }
 
-.social-links{
+/* .social-links{
 	display: grid;
-	/* align-content: center;
-	text-align: center; */
-}
+	align-content: center;
+	text-align: center;
+} */
 
 #social_img{
 	width: 100%;
@@ -330,9 +332,10 @@ h6 { font-size: 16px;}
 
 .thumbnail{
 	display: block;
-	width: 100%;
-	height:180px;
-	object-fit: cover;
+	max-width: 100%;
+	height: auto;
+	/* object-fit: cover; */
+
 }
 
 .post-preview{
@@ -358,6 +361,11 @@ h6 { font-size: 16px;}
 	margin: 2px;
 	padding: 2px 5px;
 	font-size: 12px;	
+}
+
+.postLinks {
+	display: flex;
+	justify-content: space-between;
 }
 
 
@@ -402,6 +410,19 @@ h6 { font-size: 16px;}
 	color: #fff;
 	background-color: var(--buttonColor);
 	border:none;
+}
+
+#contact-form input, #contact-form textarea {
+	margin-bottom: 6px;
+}
+
+.error {
+	color: var(--error);
+}
+
+.border-danger {
+	border: 1px solid #dee2e6;
+	border-color: var(--error);
 }
 
 
